code: add short url docs
